--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
   },
   "devDependencies": {
     "tree-sitter-cli": "^0.20.8"
-  }
+  },
+  "tree-sitter": [
+    {
+      "scope": "source.gupta",
+      "file-types": [
+        "apt"
+      ]
+    }
+  ]
 }
